--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-<dt>Spring'24</dt>
+<dt>Summer'24</dt>
+  <dd>One paper on time series understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/venkata-vavilthota/">Ragav</a>, my former MS student whose thesis work drove this paper! Preprint can be found <a href="https://arxiv.org/abs/2406.14456">here.</a></dd>
+<dt>Summer'24</dt>
   <dd>Elevated as IEEE Senior Member!</dd>
 <dt>Spring'24</dt>
   <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a> and <a href="https://neurips.cc/">NeurIPS 2024 </a>, and SPC for <a href="https://cods-comad.in/">CODS-COMAD 2024</a>!</dd>
