--- a/pubs.html
+++ b/pubs.html
@@ -31,7 +31,13 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
-	
+
+<li >
+ <a href="https://arxiv.org/abs/2406.14472">Self-supervised Multi-actor Social Activity Understanding in Streaming Videos</a>.<br>
+ Shubham Trehan and Sathyanarayanan N. Aakur<br>
+ arXiv:2406.14472, 2024. <br>
+ </li>
+
 <li>
  <a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
  Sathyanarayanan N. Aakur, Sanjoy Kundu, Shubham Trehan <br>
@@ -52,9 +58,14 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
 		<li>
+			<a href="https://arxiv.org/abs/2406.14456">Capturing Temporal Components for Time Series Classification</a> <br>
+			Venkata Ragavendra Vavilthota, Ranjith Ramanathan, Sathyanarayanan N. Aakur. <br>
+			International Conference on Pattern Recognition (ICPR), 2024. <a href="https://arxiv.org/abs/2406.14456">[Preprint]</a> <br>
+		</li>
+		<li>
 			<a href="https://ieeexplore.ieee.org/document/10496674">Pipelined Structure in the Classification of Skin Lesions based on Alexnet CNN and SVM Model with Bi-sectional Texture Features.</a><br>
-			V S S Bala Tripura Sathvika, Nagilla Anmisha, Vada Thanmayi, Suchetha M, Edwin Dhas D, Sehastrajit S, Sathyanarayanan N Aakur. <br>
-			IEEE Access. <br>
+			V S S Bala Tripura Sathvika, Nagilla Anmisha, Vada Thanmayi, Suchetha M, Edwin Dhas D, Sehastrajit S, Sathyanarayanan N. Aakur. <br>
+			IEEE Access, 2024. <br>
 		</li>
 		<li>
 			 <a href="https://arxiv.org/abs/2308.06869">Shape-Graph Matching Network (SGM-net): Registration for Statistical Shape Analysis</a><br>
