update news, pubs and group

--- a/group.html
+++ b/group.html
@@ -86,7 +86,7 @@ War Eagle!
   <div class="person">
     <img src="./files/shubham.png" alt="thumb" />
     <p>
-      <a href="#">Shubham Trehan</a>
+      <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>
       <br />
       Ph.D. Student <br/>
       (Fall 2020 - Present)
