--- a/pubs.html
+++ b/pubs.html
@@ -37,12 +37,6 @@
  Shubham Trehan and Sathyanarayanan N. Aakur<br>
  arXiv:2406.14472, 2024. <br>
  </li>
-
-<li>
- <a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
- Sathyanarayanan N. Aakur, Sanjoy Kundu, Shubham Trehan <br>
- arXiv:2305.16602, 2023. <br>
- </li>
  
 <li>
 <a href="https://arxiv.org/abs/2212.00015">Scalable Pathogen Detection from Next Generation DNA Sequencing with Deep Learning</a>.<br>
@@ -57,6 +51,11 @@ arXiv:2212.00015, 2022. <br>
 <section>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
+		<li>
+			<a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
+			Sanjoy Kundu, Shubham Trehan, Sathyanarayanan N. Aakur <br>
+			European Conference on Computer Vision (ECCV), 2024. <br>
+	 	</li>
 		<li>
 			<a href="https://arxiv.org/abs/2406.14456">Capturing Temporal Components for Time Series Classification</a> <br>
 			Venkata Ragavendra Vavilthota, Ranjith Ramanathan, Sathyanarayanan N. Aakur. <br>
