--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'24</dt>
+  <dd>One paper on social activity understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, my Ph.D. student! Preprint can be found <a href="https://arxiv.org/abs/2406.14472">here.</a></dd>
 <dt>Summer'24</dt>
   <dd>One paper on open-world egocentric activity understanding accepted at <a href="https://icpr2024.org/">ECCV 2024!</a> Congrats to my PhD students <a href="https://sanjoykundu.github.io//">Sanjoy</a> and <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham</a>! Preprint can be found <a href="https://arxiv.org/abs/2305.16602">here.</a></dd>
 <dt>Summer'24</dt>
