--- a/pubs.html
+++ b/pubs.html
@@ -31,12 +31,6 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
-
-<li >
- <a href="https://arxiv.org/abs/2406.14472">Self-supervised Multi-actor Social Activity Understanding in Streaming Videos</a>.<br>
- Shubham Trehan and Sathyanarayanan N. Aakur<br>
- arXiv:2406.14472, 2024. <br>
- </li>
  
 <li>
 <a href="https://arxiv.org/abs/2212.00015">Scalable Pathogen Detection from Next Generation DNA Sequencing with Deep Learning</a>.<br>
@@ -56,6 +50,11 @@ arXiv:2212.00015, 2022. <br>
 			Sanjoy Kundu, Shubham Trehan, Sathyanarayanan N. Aakur <br>
 			European Conference on Computer Vision (ECCV), 2024. <br>
 	 	</li>
+		<li >
+			<a href="https://arxiv.org/abs/2406.14472">Self-supervised Multi-actor Social Activity	Understanding in Streaming Videos</a>.<br>
+			Shubham Trehan and Sathyanarayanan N. Aakur<br>
+			International Conference on Pattern Recognition (ICPR), 2024. <a href="https://arxiv.org/abs/2406.14472">[Preprint]</a> <br>
+		</li>
 		<li>
 			<a href="https://arxiv.org/abs/2406.14456">Capturing Temporal Components for Time Series Classification</a> <br>
 			Venkata Ragavendra Vavilthota, Ranjith Ramanathan, Sathyanarayanan N. Aakur. <br>
