--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Summer'24</dt>
+<dt>Fall'24</dt>
+  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2024!</a> and <a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></dd>
+<dt>Summer'24</dt>
   <dd>One paper on social activity understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, my Ph.D. student! Preprint can be found <a href="https://arxiv.org/abs/2406.14472">here.</a></dd>
 <dt>Summer'24</dt>
   <dd>One paper on open-world egocentric activity understanding accepted at <a href="https://icpr2024.org/">ECCV 2024!</a> Congrats to my PhD students <a href="https://sanjoykundu.github.io//">Sanjoy</a> and <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham</a>! Preprint can be found <a href="https://arxiv.org/abs/2305.16602">here.</a></dd>
@@ -72,17 +74,6 @@ Email: san0028 -at- auburn.edu <br>
   <dd>One paper on Shape Graph Matching accepted into <a href="https://biomedicalimaging.org/2024//">IEEE International Symposium on Biomedical Imaging (ISBI)</a>! <a href="https://arxiv.org/abs/2308.06869">Preprint</a> now online! Congrats <a href="https://www.linkedin.com/in/shenyuan-liang-14571819a/">Shenyuan (FSU)</a> on his first paper!</dd>
 <dt>Spring'24</dt>
   <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! <a href="https://arxiv.org/abs/2401.13219">Preprint</a> now online!</dd>
-<dt>Fall'23</dt>
-	<dd>One paper accepted for Oral presentation at <a href="https://www.icmla-conference.org/icmla23/">IEEE ICMLA 2023</a>! Congrats to Shubham and my undergrad student Udhav on their second and first papers, respectively!</dd>
-<dt>Fall'23</dt>
-	<dd>Serving as Area Chair for <a href="https://wacv2024.thecvf.com/">IEEE/CVF WACV 2024</a></dd>
-<dt>Fall'23</dt>
-	<dd>Serving as Demo Chair and Area Chair at <a href="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024!</a> Looking forward to your submissions!</dd>
-<dt>Fall'23</dt>
-	<dd>Moved to the <a href="https://eng.auburn.edu/csse/">CSSE Department</a> at <a href="http://auburn.edu/">Auburn University!</a></dd>
-  <dt>Summer'23</dt>
-	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
-
 </dl>
 
 <a href="news.html">More news.</a>.
@@ -133,7 +124,7 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Teaching</h2>
 <ul>
  <li class="packed">Spring 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5630/6630 Machine Learning</a>. Auburn University.</li>
- <li class="packed">Fall 2023: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
+ <li class="packed">Fall 2023, 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
  <li class="packed">Fall 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a>. Oklahoma State University.</li>
  <li class="packed">Spring 2020, 2021, 2022, 2023: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>. Oklahoma State University.</li>
  <li class="packed">Summer 2019: <a href="#">COP 2512: IT Programming Fundamentals</a>. University of South Florida (USF) </li>
