--- a/news.html
+++ b/news.html
@@ -35,9 +35,11 @@
 
 <br>
 <dl class="dl-horizontal">
-  <dt>Summer'24</dt>
+<dt>Fall'24</dt>
+  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2024!</a> and <a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></dd>
+<dt>Summer'24</dt>
   <dd>One paper on social activity understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, my Ph.D. student! Preprint can be found <a href="https://arxiv.org/abs/2406.14472">here.</a></dd>
-  <dt>Summer'24</dt>
+<dt>Summer'24</dt>
   <dd>One paper on open-world egocentric activity understanding accepted at <a href="https://icpr2024.org/">ECCV 2024!</a> Congrats to my PhD students <a href="https://sanjoykundu.github.io//">Sanjoy</a> and <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham</a>! Preprint can be found <a href="https://arxiv.org/abs/2305.16602">here.</a></dd>
 <dt>Summer'24</dt>
   <dd>One paper on time series understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/venkata-vavilthota/">Ragav</a>, my former MS student whose thesis work drove this paper! Preprint can be found <a href="https://arxiv.org/abs/2406.14456">here.</a></dd>
