--- a/pubs.html
+++ b/pubs.html
@@ -46,6 +46,11 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
 		<li>
+			<a href="#">Enhancing Corn Yield Prediction: Optimizing Data Quality or Model Complexity?. </a><br>
+			Huihui Zhang, Yuting Zhou, Shengfang Ma}, Sathyanarayanan N. Aakur. <br>
+			Smart Agricultural Technology, 2024. <br>
+		</li>
+		<li>
 			<a href="https://arxiv.org/abs/2305.16602">Discovering Novel Actions in an Open World with Object-Grounded Visual Commonsense Reasoning</a>.<br>
 			Sanjoy Kundu, Shubham Trehan, Sathyanarayanan N. Aakur <br>
 			European Conference on Computer Vision (ECCV), 2024. <br>
