--- a/group.html
+++ b/group.html
@@ -137,25 +137,7 @@ War Eagle!
       (Ph.D. from Spring 2025) <br/>
       (Summer 2024 - Present)
     </p>
-  </div>
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/ct-dunn/">Charles "Thomas" Dunn</a>
-      <br />
-      M.S. Student <br/>
-      (Summer 2024 - Present)
-    </p>
   </div>    
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>
-      <br />
-      M.S. Student <br/>
-      (Summer 2024 - Present)
-    </p>
-  </div>  
 	<div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
@@ -233,6 +215,8 @@ War Eagle!
 </center>
 <be>
 <br/>
+<a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024). <br/>
+<a href="https://www.linkedin.com/in/ct-dunn/">Charles "Thomas" Dunn</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024). <br/>
 <a href="#">Zhou Chen</a>. AU, M.S. C.S. (Fall 2023 - Spring 2024). Next: Ph.D. at Auburn University.<br/>
 <a href="https://elijahparker000.com/">Elijah Parker</a>. AU, B.S C.E. (Fall 2023 - Spring 2024). Next: Engineer at Johns Hopkins Applied Physics Laboratory.<br/>
 <a href="#">Chi-Jui Wu</a>. AU, M.S. C.S. (Spring 2024). <br/>
