--- a/pubs.html
+++ b/pubs.html
@@ -47,7 +47,7 @@ arXiv:2212.00015, 2022. <br>
 	<ul>
 		<li>
 			<a href="#">Enhancing Corn Yield Prediction: Optimizing Data Quality or Model Complexity?. </a><br>
-			Huihui Zhang, Yuting Zhou, Shengfang Ma}, Sathyanarayanan N. Aakur. <br>
+			Huihui Zhang, Yuting Zhou, Shengfang Ma, Sathyanarayanan N. Aakur. <br>
 			Smart Agricultural Technology, 2024. <br>
 		</li>
 		<li>
@@ -58,7 +58,7 @@ arXiv:2212.00015, 2022. <br>
 		<li >
 			<a href="https://arxiv.org/abs/2406.14472">Self-supervised Multi-actor Social Activity	Understanding in Streaming Videos</a>.<br>
 			Shubham Trehan and Sathyanarayanan N. Aakur<br>
-			International Conference on Pattern Recognition (ICPR), 2024. <a href="https://arxiv.org/abs/2406.14472">[Preprint]</a> <br>
+			International Conference on Pattern Recognition (ICPR), 2024. <a href="Projects/SocialActivityDetection/index.html">[Project Page]</a> <br>
 		</li>
 		<li>
 			<a href="https://arxiv.org/abs/2406.14456">Capturing Temporal Components for Time Series Classification</a> <br>
