--- a/pubs.html
+++ b/pubs.html
@@ -46,7 +46,7 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
 		<li>
-			<a href="#">Enhancing Corn Yield Prediction: Optimizing Data Quality or Model Complexity?. </a><br>
+			<a href="https://doi.org/10.1016/j.atech.2024.100671">Enhancing Corn Yield Prediction: Optimizing Data Quality or Model Complexity?. </a><br>
 			Huihui Zhang, Yuting Zhou, Shengfang Ma, Sathyanarayanan N. Aakur. <br>
 			Smart Agricultural Technology, 2024. <br>
 		</li>
