--- a/group.html
+++ b/group.html
@@ -220,7 +220,7 @@ War Eagle!
 <a href="#">Zhou Chen</a>. AU, M.S. C.S. (Fall 2023 - Spring 2024). Next: Ph.D. at Auburn University.<br/>
 <a href="https://elijahparker000.com/">Elijah Parker</a>. AU, B.S C.E. (Fall 2023 - Spring 2024). Next: Engineer at Johns Hopkins Applied Physics Laboratory.<br/>
 <a href="#">Chi-Jui Wu</a>. AU, M.S. C.S. (Spring 2024). <br/>
-<a href="#">Shengfang Ma</a>. OSU, M.S. C.S. (Thesis) (Summer 2021 - Spring 2024). Next: SDE at OSU<br/>
+<a href="https://www.linkedin.com/in/shengfang-ma-80463522a/">Shengfang Ma</a>. OSU, M.S. C.S. (Thesis) (Summer 2021 - Spring 2024). Next: SDE at OSU<br/>
 <a href="#">Venkata Ragavendra Vavilthota</a>. OSU, M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). Next: Data Engineer, Wayfair. <br/>
 <a href="#">Priyadharsini Ramamurthy</a>. OSU, Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
 <a href="#">Devyn Hubbard</a>. OSU, B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
