--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Email: san0028 -at- auburn.edu <br>
 <dt>Fall'24</dt>
   <dd>One paper on analyzing ML for corn yield prediction accepted at <a href="https://www.sciencedirect.com/journal/smart-agricultural-technology/">Smart Agricultural Technology!</a> Congrats to <a href="https://www.linkedin.com/in/shengfang-ma-80463522a/">Shengfang Ma</a>, my former M.S. student, whose thesis drove this work! Paper can be found <a href="https://www.sciencedirect.com/science/article/pii/S2772375524002764?via%3Dihub">here.</a></dd>
 <dt>Fall'24</dt>
-  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2025!</a> and <a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a></dd>
+  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2025!</a>, <a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a>, and <a href="https://icml.cc//">ICML 2025</a></dd>
 <dt>Summer'24</dt>
   <dd>One paper on social activity understanding accepted at <a href="https://icpr2024.org/">ICPR 2024!</a> Congrats to <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, my Ph.D. student! Preprint can be found <a href="https://arxiv.org/abs/2406.14472">here.</a></dd>
 <dt>Summer'24</dt>
