--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ This entails developing approaches that do things such as:
 <a name="teaching"></a>
 <h2 style="text-align: center">Teaching</h2>
 <ul>
+ <li class="packed">Spring 2025: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 1100 The Power of AI: Fundamentals to Applications</a>. Auburn University.</li>
  <li class="packed">Spring 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5630/6630 Machine Learning</a>. Auburn University.</li>
  <li class="packed">Fall 2023, 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
  <li class="packed">Fall 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a>. Oklahoma State University.</li>
@@ -141,6 +142,8 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Talks</h2>
 <br/>
 <ul>
+<li class="packed">Active event perception for effective human-robot collaboration. 1st KAMTIC Manufacturing Technology Innovation Workshop. Spring 2025.</li>
+<li class="packed">Towards open world egocentric activity recognition from multimodal videos. Area Chair Workshop, CVPR 2024 Summer 2024.</li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. DMS Statistics and Data Science Seminar, Auburn University. Spring 2024.</li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. WADLA 3.0, IIT-Sri City. Fall 2023 </li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. 7th Summer School on AI, IIT-Hyderabad. Summer 2023 </li>
