--- a/pubs.html
+++ b/pubs.html
@@ -33,6 +33,10 @@
 <ul>
  
 <li>
+<a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
+Yash Mahajan, Matthew Freestone, Sathyanarayanan Aakur, Santu Karmaker
+arXiv:2402.11094, 2025.
+<br>
 <a href="https://arxiv.org/abs/2212.00015">Scalable Pathogen Detection from Next Generation DNA Sequencing with Deep Learning</a>.<br>
 Sai Narayanan, Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy, Arunkumar Bagavathi, Vishalini Ramnath, Akhilesh Ramachandran
 arXiv:2212.00015, 2022. <br>
