--- a/pubs.html
+++ b/pubs.html
@@ -31,7 +31,12 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
- 
+<li>
+<a href="https://arxiv.org/abs/2504.03948">ProbRes: Probabilistic Jump Diffusion for Open-World Egocentric Activity Recognition</a>.<br>
+Sanjoy Kundu, Shanmukha Vellamchetti, Sathyanarayanan Aakur
+arXiv:2504.03948, 2025.
+<br>
+</li> 
 <li>
 <a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
 Yash Mahajan, Matthew Freestone, Sathyanarayanan Aakur, Santu Karmaker
@@ -46,6 +51,17 @@ arXiv:2212.00015, 2022. <br>
 
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
+</section>
+<!-- 2025 -->
+<section>
+	<h2 style="text-align: center">2025</h2>	
+	<ul>
+		<li>
+			<a href="#">Digital Twin-Aided Municipal Traffic Control. </a><br>
+			Sercan Aygun, Reeti Pradhananga, Shelby Williams, Li Chen, Yazhou Tu, Whitney Crow, Sathyanarayanan Aakur, Nian-Feng Tzeng. <br>
+			Simulation of Urban Mobility (SUMO) User Conference, 2025. <br>
+		</li>
+	</ul>
 </section>
 <!-- 2024 -->
 <section>
