--- a/news.html
+++ b/news.html
@@ -35,6 +35,10 @@
 
 <br>
 <dl class="dl-horizontal">
+<dt>Spring'25</dt>
+  <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
+<dt>Spring'25</dt>
+  <dd>Congrats to my student <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
 <dt>Fall'24</dt>
   <dd>One paper on analyzing ML for corn yield prediction accepted at <a href="https://www.sciencedirect.com/journal/smart-agricultural-technology/">Smart Agricultural Technology!</a> Congrats to <a href="https://www.linkedin.com/in/shengfang-ma-80463522a/">Shengfang Ma</a>, my former M.S. student, whose thesis drove this work! Paper can be found <a href="https://www.sciencedirect.com/science/article/pii/S2772375524002764?via%3Dihub">here.</a></dd>
 <dt>Fall'24</dt>
