--- a/group.html
+++ b/group.html
@@ -133,27 +133,18 @@ War Eagle!
     <p>
       <a href="#">Akash Rao</a>
       <br />
-      M.S. Student <br/>
-      (Ph.D. from Spring 2025) <br/>
+      Ph.D. Student <br/>
       (Summer 2024 - Present)
     </p>
   </div>    
-	<div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>
-      <br />
-      B.S. Student <br/>
-      (Fall 2023 - Present)
-    </p>
-  </div>  
+
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Joe Lin</a>
       <br />
-      B.S. Student <br/>
-      (Spring 2024 - Present)
+      Ph.D Student <br/>
+      (Fall 2025 - Present)
     </p>
   </div>  
   <div class="person">
@@ -217,7 +208,9 @@ War Eagle!
 </center>
 <be>
 <br/>
-<a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024). <br/>
+<a href="#/">Joe Lin</a>. AU, B.S. C.S. Spring 2024 - Spring 2025. Next: PhD at Auburn University.<br/>
+<a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>. AU, B.S. C.S. Fall 2023 - Spring 2025. <br/>
+<a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024).  Next: Data Scientist, Kansas City Chiefs<br/>
 <a href="https://www.linkedin.com/in/ct-dunn/">Charles "Thomas" Dunn</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024). <br/>
 <a href="#">Zhou Chen</a>. AU, M.S. C.S. (Fall 2023 - Spring 2024). Next: Ph.D. at Auburn University.<br/>
 <a href="https://elijahparker000.com/">Elijah Parker</a>. AU, B.S C.E. (Fall 2023 - Spring 2024). Next: Engineer at Johns Hopkins Applied Physics Laboratory.<br/>
