--- a/pubs.html
+++ b/pubs.html
@@ -87,10 +87,13 @@ arXiv:2212.00015, 2022. <br>
 			Venkata Ragavendra Vavilthota, Ranjith Ramanathan, Sathyanarayanan N. Aakur. <br>
 			International Conference on Pattern Recognition (ICPR), 2024. <a href="https://arxiv.org/abs/2406.14456">[Preprint]</a> <br>
 		</li>
+		
 		<li>
-			<a href="https://ieeexplore.ieee.org/document/10496674">Pipelined Structure in the Classification of Skin Lesions based on Alexnet CNN and SVM Model with Bi-sectional Texture Features.</a><br>
-			V S S Bala Tripura Sathvika, Nagilla Anmisha, Vada Thanmayi, Suchetha M, Edwin Dhas D, Sehastrajit S, Sathyanarayanan N. Aakur. <br>
-			IEEE Access, 2024. <br>
+			<a href="https://link.springer.com/article/10.1007/s12065-023-00859-7">An insight on recent advancements and future perspectives in detection techniques of Parkinson’s disease.</a><br>
+			Snehith Sankineni, Aanchal Saraswat, M. Suchetha, Sathyanarayanan N. Aakur, S. Sehastrajit, D. Edwin Dhas. <br>
+			Evolutionary Intelligence, 2024. <br>
+		</li>
+</a>
 		</li>
 		<li>
 			 <a href="https://arxiv.org/abs/2308.06869">Shape-Graph Matching Network (SGM-net): Registration for Statistical Shape Analysis</a><br>
