update ra-l news

--- a/news.html
+++ b/news.html
@@ -35,6 +35,8 @@
 
 <br>
 <dl class="dl-horizontal">
+<dt>Summer'25</dt>
+  <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
 <dt>Spring'25</dt>
   <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
 <dt>Spring'25</dt>
