--- a/pubs.html
+++ b/pubs.html
@@ -57,6 +57,11 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
+			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. <br> 
+			Zhou Chen, Sanjoy Kundu, Harsimran Baweja, Sathyanarayanan Aakur. Self-Supervised Free Energy Minimization. <br> 
+			IEEE Robotics and Automation Letters (RA-L), 2025. </a>
+		</li>
+		<li>
 			<a href="#">Digital Twin-Aided Municipal Traffic Control. </a><br>
 			Sercan Aygun, Reeti Pradhananga, Shelby Williams, Li Chen, Yazhou Tu, Whitney Crow, Sathyanarayanan Aakur, Nian-Feng Tzeng. <br>
 			Simulation of Urban Mobility (SUMO) User Conference, 2025. <br>
