--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'25</dt>
+  <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
+<dt>Spring'25</dt>
   <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
 <dt>Spring'25</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
