--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-<dt>Spring'25</dt>
+<dt>Summer'25</dt>
   <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
 <dt>Spring'25</dt>
   <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
