--- a/pubs.html
+++ b/pubs.html
@@ -57,9 +57,9 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
-			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. <br> 
+			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. </a><br> 
 			Zhou Chen, Sanjoy Kundu, Harsimran Baweja, Sathyanarayanan Aakur. Self-Supervised Free Energy Minimization. <br> 
-			IEEE Robotics and Automation Letters (RA-L), 2025. </a>
+			IEEE Robotics and Automation Letters (RA-L), 2025. 
 		</li>
 		<li>
 			<a href="#">Digital Twin-Aided Municipal Traffic Control. </a><br>
