--- a/pubs.html
+++ b/pubs.html
@@ -32,8 +32,14 @@
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
 <li>
+<a href="https://arxiv.org/abs/2506.05651">Hallucinate, Ground, Repeat: A Framework for Generalized Visual Relationship Detection</a>.<br>
+Shanmukha Vellamcheti, Sanjoy Kundu, Sathyanarayanan Aakur
+arXiv:2504.03948, 2025.
+<br>
+</li> 
+<li>
 <a href="https://arxiv.org/abs/2504.03948">ProbRes: Probabilistic Jump Diffusion for Open-World Egocentric Activity Recognition</a>.<br>
-Sanjoy Kundu, Shanmukha Vellamchetti, Sathyanarayanan Aakur
+Sanjoy Kundu, Shanmukha Vellamcheti, Sathyanarayanan Aakur
 arXiv:2504.03948, 2025.
 <br>
 </li> 
@@ -59,7 +65,7 @@ arXiv:2212.00015, 2022. <br>
 		<li>
 			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. </a><br> 
 			Zhou Chen, Sanjoy Kundu, Harsimran Baweja, Sathyanarayanan Aakur. Self-Supervised Free Energy Minimization. <br> 
-			IEEE Robotics and Automation Letters (RA-L), 2025. 
+			IEEE Robotics and Automation Letters (RA-L), 2025.  <br>
 		</li>
 		<li>
 			<a href="#">Digital Twin-Aided Municipal Traffic Control. </a><br>
