--- a/Projects/EASE/index.html
+++ b/Projects/EASE/index.html
@@ -67,7 +67,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Auburn University<br>Under Review</span>
+                    <span class="author-block">Auburn University<br>IEEE Robotics and Automation Letters</span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
