--- a/pubs.html
+++ b/pubs.html
@@ -63,7 +63,9 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
-			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. </a><br> <br> 
+			<a href="#">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. </a><br> 
+			Zhou Chen, Sanjoy Kundu, Harsimran Baweja, Sathyanarayanan N. Aakur
+			<br> 
 			IEEE Robotics and Automation Letters (RA-L), 2025.  <br>
 		</li>
 		<li>
