--- a/group.html
+++ b/group.html
@@ -88,7 +88,7 @@ War Eagle!
     <p>
       <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>
       <br />
-      Ph.D. Student <br/>
+      Ph.D. Candidate <br/>
       (Fall 2020 - Present)
     </p>
   </div>
@@ -113,7 +113,7 @@ War Eagle!
   <div class="person">
     <img src="./files/Zhou_Chen.jpeg" alt="thumb" />
     <p>
-      <a href="#">Zhou Chen</a>
+      <a href="https://zzc0053.github.io/">Zhou Chen</a>
       <br />
       Ph.D. Student <br/>
       (Summer 2024 - Present)
@@ -144,7 +144,7 @@ War Eagle!
       <a href="#">Joe Lin</a>
       <br />
       Ph.D Student <br/>
-      (Fall 2025 - Present)
+      (Summer 2025 - Present)
     </p>
   </div>  
   <div class="person">
@@ -176,6 +176,8 @@ War Eagle!
 </center>
 <be>
 <br/>
+  <b>2025</b>&ensp;&ensp;
+  <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a> named <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer:~:text=Woo%0ASanjay%20Haresh-,Sanjoy%20Kundu,-Sara%20Vicente%0ASarah">Outstanding Reviewer at CVPR 2025 </a>.<br/>
   <b>2025</b>&ensp;&ensp;
   <a href="">Beau Brechtel</a> (B.S. C.E, AU) was named <a href="https://eng.auburn.edu/awards/outstanding-student-award.html#:~:text=Beau%20Brechtel%2C%C2%A0Computer%20Science%20and%20Software%20Engineering">Outstanding Student</a> in Computer Science.<br/>
   <b>2025</b>&ensp;&ensp;
