--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Summer'25</dt>
+  <dd>Our paper on open world egocentric action recognition has been accepted to <a href="https://iccv.thecvf.com/">IEEE/CVF International Conference on Computer Vision (ICCV)</a>! Congrats to my student <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a> for his trifecta of A* vision papers and to <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamcheti</a> on his first paper! Preprint can be found <a href="https://arxiv.org/abs/2504.03948">here.</a></dd>
+<dt>Summer'25</dt>
   <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
 <dt>Spring'25</dt>
   <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
@@ -78,10 +80,6 @@ Email: san0028 -at- auburn.edu <br>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
-<dt>Spring'24</dt>
-  <dd>One paper on Shape Graph Matching accepted into <a href="https://biomedicalimaging.org/2024//">IEEE International Symposium on Biomedical Imaging (ISBI)</a>! <a href="https://arxiv.org/abs/2308.06869">Preprint</a> now online! Congrats <a href="https://www.linkedin.com/in/shenyuan-liang-14571819a/">Shenyuan (FSU)</a> on his first paper!</dd>
-<dt>Spring'24</dt>
-  <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! <a href="https://arxiv.org/abs/2401.13219">Preprint</a> now online!</dd>
 </dl>
 
 <a href="news.html">More news.</a>.
