--- a/pubs.html
+++ b/pubs.html
@@ -38,12 +38,6 @@ arXiv:2506.05651, 2025.
 <br>
 </li> 
 <li>
-<a href="https://arxiv.org/abs/2504.03948">ProbRes: Probabilistic Jump Diffusion for Open-World Egocentric Activity Recognition</a>.<br>
-Sanjoy Kundu, Shanmukha Vellamcheti, Sathyanarayanan Aakur
-arXiv:2504.03948, 2025.
-<br>
-</li> 
-<li>
 <a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
 Yash Mahajan, Matthew Freestone, Sathyanarayanan Aakur, Santu Karmaker
 arXiv:2402.11094, 2025.
@@ -62,6 +56,13 @@ arXiv:2212.00015, 2022. <br>
 <section>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
+		<li>
+			<a href="https://arxiv.org/abs/2504.03948">ProbRes: Probabilistic Jump Diffusion for Open-World Egocentric Activity Recognition</a>.<br>
+			Sanjoy Kundu, Shanmukha Vellamcheti, Sathyanarayanan Aakur<br>
+			IEEE/CVF International Conference on Computer Vision (ICCV), 2025.
+			<br>
+		</li> 
+
 		<li>
 			<a href="https://arxiv.org/abs/2506.17516">EASE: Embodied Active Event Perception via Self-Supervised Free Energy Minimization. </a><br> 
 			Zhou Chen, Sanjoy Kundu, Harsimran Baweja, Sathyanarayanan N. Aakur
