--- a/group.html
+++ b/group.html
@@ -95,7 +95,7 @@ War Eagle!
  <div class="person">
     <img src="./files/shanmukha.jpeg" alt="thumb" />
     <p>
-      <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamchetti</a>
+      <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamcheti</a>
       <br />
       Ph.D. Student <br/>
       (Spring 2024 - Present)
