update pubs and group

--- a/group.html
+++ b/group.html
@@ -72,7 +72,7 @@ War Eagle!
       PI, Assistant Professor
     </p>
   </div>
- -->
+ 
   <div class="person">
     <img src="./files/Sanjoy1.png" alt="thumb" />
     <p>
@@ -82,6 +82,7 @@ War Eagle!
       (Spring 2020 - Present)
     </p>
   </div>
+-->
 
   <div class="person">
     <img src="./files/shubham.png" alt="thumb" />
@@ -212,6 +213,7 @@ War Eagle!
 </center>
 <be>
 <br/>
+<a href="#/">Sanjoy Kundu</a>. AU, Ph.D Spring 2020 - Summer 2025. Next: Visiting Assistant Professor at the University of North Carolina Greensboro.<br/>
 <a href="#/">Joe Lin</a>. AU, B.S. C.S. Spring 2024 - Spring 2025. Next: PhD at Auburn University.<br/>
 <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>. AU, B.S. C.S. Fall 2023 - Spring 2025. <br/>
 <a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024).  Next: Data Scientist, Kansas City Chiefs<br/>
