--- a/pubs.html
+++ b/pubs.html
@@ -57,6 +57,13 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
+			<a href="#">CRAFT: A Neuro-Symbolic Reasoning Framework for Visual Functional Affordance Grounding</a>.<br>
+			Zhou Chen, Joe Lin, Sathyanarayanan Aakur<br>
+			Conference on Neurosymbolic Learning and Reasoning (NeSy), 2025.
+			<br>
+		</li> 
+
+		<li>
 			<a href="https://arxiv.org/abs/2504.03948">ProbRes: Probabilistic Jump Diffusion for Open-World Egocentric Activity Recognition</a>.<br>
 			Sanjoy Kundu, Shanmukha Vellamcheti, Sathyanarayanan Aakur<br>
 			IEEE/CVF International Conference on Computer Vision (ICCV), 2025.
