--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Summer'25</dt>
+  <dd>Our paper on open world functional affordance grounding has been accepted to the <a href="https://2025.nesyconf.org/">Conference on Neurosymbolic Learning and Reasoning (NeSy 2025)</a>! Congrats to my student <a href="https://zzc0053.github.io/">Zhou Chen</a> for his second paper and to <a href="#">Joe Lin</a> on his first paper! Preprint coming soon!</dd>
+<dt>Summer'25</dt>
   <dd>Our paper on open world egocentric action recognition has been accepted to <a href="https://iccv.thecvf.com/">IEEE/CVF International Conference on Computer Vision (ICCV)</a>! Congrats to my student <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a> for his trifecta of A* vision papers and to <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamcheti</a> on his first paper! Preprint can be found <a href="https://arxiv.org/abs/2504.03948">here.</a></dd>
 <dt>Summer'25</dt>
   <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
