--- a/pubs.html
+++ b/pubs.html
@@ -77,7 +77,7 @@ arXiv:2212.00015, 2022. <br>
 			IEEE Robotics and Automation Letters (RA-L), 2025.  <br>
 		</li>
 		<li>
-			<a href="#">Digital Twin-Aided Municipal Traffic Control. </a><br>
+			<a href="https://www.tib-op.org/ojs/index.php/scp/article/view/2619">Digital Twin-Aided Municipal Traffic Control. </a><br>
 			Sercan Aygun, Reeti Pradhananga, Shelby Williams, Li Chen, Yazhou Tu, Whitney Crow, Sathyanarayanan Aakur, Nian-Feng Tzeng. <br>
 			Simulation of Urban Mobility (SUMO) User Conference, 2025. <br>
 		</li>
