--- a/pubs.html
+++ b/pubs.html
@@ -57,7 +57,7 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
-			<a href="#">CRAFT: A Neuro-Symbolic Reasoning Framework for Visual Functional Affordance Grounding</a>.<br>
+			<a href="https://arxiv.org/abs/2507.14426">CRAFT: A Neuro-Symbolic Reasoning Framework for Visual Functional Affordance Grounding</a>.<br>
 			Zhou Chen, Joe Lin, Sathyanarayanan Aakur<br>
 			Conference on Neurosymbolic Learning and Reasoning (NeSy), 2025.
 			<br>
