update group and news

--- a/group.html
+++ b/group.html
@@ -130,7 +130,7 @@ War Eagle!
     </p>
   </div>  
   <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
+    <img src="./files/akash.jpeg" alt="thumb" />
     <p>
       <a href="#">Akash Rao</a>
       <br />
@@ -149,6 +149,16 @@ War Eagle!
     </p>
   </div>  
   <div class="person">
+    <img src="./files/uday.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Uday Kiran Kothapalli</a>
+      <br />
+      Ph.D. Student (AU) <br/>
+      (Fall 2025 - Present)
+    </p>
+  </div>  
+  
+  <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a>
@@ -166,7 +176,16 @@ War Eagle!
       (Fall 2022 - Present)
     </p>
   </div>  
-	
+	<div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Dane Miller</a>
+      <br />
+      B.S. Student (AU) <br/>
+      (Spring 2025 - Present)
+    </p>
+  </div>  
+
 </div>
 
 </section>
