--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+<dt>Fall'25</dt>
+  <dd>Serving as Associate Editor for <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93/">IEEE MultiMedia</a> and <a href="https://dl.acm.org/journal/toit/">ACM Transactions on Internet Technology</a>!</dd>
+<dt>Fall'25</dt>
+  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2025</a> and <a href="https://wacv2026.thecvf.com/">IEEE/CVF WACV 2025</a>!</dd>
 <dt>Summer'25</dt>
   <dd>Our paper on open world functional affordance grounding has been accepted to the <a href="https://2025.nesyconf.org/">Conference on Neurosymbolic Learning and Reasoning (NeSy 2025)</a>! Congrats to my student <a href="https://zzc0053.github.io/">Zhou Chen</a> for his second paper and to <a href="#">Joe Lin</a> on his first paper! Link to preprint is <a href="https://arxiv.org/abs/2507.14426">here</a></dd>
 <dt>Summer'25</dt>
