update paper and cv

--- a/pubs.html
+++ b/pubs.html
@@ -57,6 +57,12 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
 		<li>
+			<a href="#">SPARK: Scene Prediction Augmented with  Relational-Commonsense Knowledge</a>.<br>
+			Chaitanya Garg, Tanishq Jain, Sathyanarayanan N. Aakur, Raghava Mutharaju <br>
+			International Conference on Data Science (IKDD CODS 2025), 2025.
+			<br>
+		</li>
+		<li>
 			<a href="https://arxiv.org/abs/2507.14426">CRAFT: A Neuro-Symbolic Reasoning Framework for Visual Functional Affordance Grounding</a>.<br>
 			Zhou Chen, Joe Lin, Sathyanarayanan Aakur<br>
 			Conference on Neurosymbolic Learning and Reasoning (NeSy), 2025.
