--- a/news.html
+++ b/news.html
@@ -36,6 +36,10 @@
 <br>
 <dl class="dl-horizontal">
 <dt>Fall'25</dt>
+  <dd>
+    One paper accepted to <a href="https://ikdd.acm.org/cods-2025/">International Conference on Data Science (IKDD CODS 2025)!</a> Congrats to the undergraduate students Chaitanya Garg and Tanishq Jain on their first papers!
+  </dd>
+<dt>Fall'25</dt>
   <dd>Serving as Associate Editor for <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=93/">IEEE MultiMedia</a> and <a href="https://dl.acm.org/journal/toit/">ACM Transactions on Internet Technology</a>!</dd>
 <dt>Fall'25</dt>
   <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2026</a> and <a href="https://wacv2026.thecvf.com/">IEEE/CVF WACV 2026</a>!</dd>
