--- a/pubs.html
+++ b/pubs.html
@@ -32,6 +32,18 @@
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
 <li>
+<a href="https://arxiv.org/abs/2510.09593">STaTS: Structure-Aware Temporal Sequence Summarization via Statistical Window Merging</a>.<br>
+Disharee Bhowmick, Ranjith Ramanathan, Sathyanarayanan N. Aakur
+arXiv:2510.09593, 2025.
+<br>
+</li> 
+<li>
+<a href="https://arxiv.org/abs/2510.09583">FSP-DETR: Few-Shot Prototypical Parasitic Ova Detection</a>.<br>
+Shubham Trehan, Udhav Ramachandran, Akash Rao, Ruth Scimeca, Sathyanarayanan N. Aakur
+arXiv:2510.09583, 2025.
+<br>
+</li> 
+<li>
 <a href="https://arxiv.org/abs/2506.05651">Hallucinate, Ground, Repeat: A Framework for Generalized Visual Relationship Detection</a>.<br>
 Shanmukha Vellamcheti, Sanjoy Kundu, Sathyanarayanan Aakur
 arXiv:2506.05651, 2025.
