update pubs and group

--- a/group.html
+++ b/group.html
@@ -72,17 +72,7 @@ War Eagle!
       PI, Assistant Professor
     </p>
   </div>
- 
-  <div class="person">
-    <img src="./files/Sanjoy1.png" alt="thumb" />
-    <p>
-      <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>
-      <br />
-      Ph.D. Candidate <br/>
-      (Spring 2020 - Present)
-    </p>
-  </div>
--->
+ -->
 
   <div class="person">
     <img src="./files/shubham.png" alt="thumb" />
@@ -161,6 +151,16 @@ War Eagle!
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
+      <a href="https://www.linkedin.com/in/yash-mahajan/">Yash Mahajan</a>
+      <br />
+      Ph.D. Candidate, Co-advised with Dr. Karmaker <br/>
+      (Fall 2024 - Present)
+    </p>
+  </div>
+
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
       <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a>
       <br />
       B.S. Student <br/>
@@ -185,6 +185,7 @@ War Eagle!
       (Spring 2025 - Present)
     </p>
   </div>  
+
 
 </div>
 
