--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ Email: san0028 -at- auburn.edu <br>
 <dl class="dl-horizontal">
 <dt>Fall'25</dt>
   <dd>
+    One paper accepted to <a href="https://2025.aaclnet.org/">IJCNLP-AACL 2025!</a> Congrats to Yash Mahajan and all co-authors!
+  </dd>
+<dt>Fall'25</dt>
+  <dd>
     One paper accepted to <a href="https://ikdd.acm.org/cods-2025/">International Conference on Data Science (IKDD CODS 2025)!</a> Congrats to the undergraduate students Chaitanya Garg and Tanishq Jain on their first papers!
   </dd>
 <dt>Fall'25</dt>
