--- a/pubs.html
+++ b/pubs.html
@@ -50,12 +50,6 @@ arXiv:2506.05651, 2025.
 <br>
 </li> 
 <li>
-<a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
-Yash Mahajan, Matthew Freestone, Sathyanarayanan Aakur, Santu Karmaker
-arXiv:2402.11094, 2025.
-<br>
-</li>
-<li>
 <a href="https://arxiv.org/abs/2212.00015">Scalable Pathogen Detection from Next Generation DNA Sequencing with Deep Learning</a>.<br>
 Sai Narayanan, Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy, Arunkumar Bagavathi, Vishalini Ramnath, Akhilesh Ramachandran
 arXiv:2212.00015, 2022. <br>
@@ -68,6 +62,12 @@ arXiv:2212.00015, 2022. <br>
 <section>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
+		<li>
+			<a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
+			Yash Mahajan, Matthew Freestone, Naman Bansal, Sathyanarayanan Aakur, Santu Karmaker. <br>
+			Asia-Pacific Chapter of the Association for Computational Linguistics (IJCNLP-AACL), 2025 <a href="https://arxiv.org/abs/2402.11094">[Preprint]</a><br>
+		</li>
+
 		<li>
 			<a href="#">SPARK: Scene Prediction Augmented with  Relational-Commonsense Knowledge</a>.<br>
 			Chaitanya Garg, Tanishq Jain, Sathyanarayanan N. Aakur, Raghava Mutharaju <br>
