--- a/group.html
+++ b/group.html
@@ -106,7 +106,7 @@ War Eagle!
     <p>
       <a href="https://zzc0053.github.io/">Zhou Chen</a>
       <br />
-      Ph.D. Student <br/>
+      Ph.D. Candidate <br/>
       (Summer 2024 - Present)
     </p>
   </div>  
